update backend kuota conseling
